# gameshop

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  env_example  run_docker.py
src/: database.rs  encryption.rs  hashing.rs  jwt.rs  lib.rs  logging.rs  main.rs  middleware.rs  server.rs  user_database.rs
src/errors/: custom_errors.rs  mod.rs
src/tests/: mod.rs  tests.rs
web/: add-footer.js  browse-games.js  browse.html  impressum.html  index.html  login.html  login.js  navbar-auth.js  privacy.html  profile.html  profile.js  sell.html  sell.js  signup.html  signup.js  style.css
